--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
            </ul></li>
     </ul>
 </div>
-<div style="background-image: url(img/cabecera1.png); width:100%" id="slide3" class="slide3">
+<div style="background-image: url(img/cabecera1.png); background-size: cover;" id="slide3" class="slide3">
   <div class="br">
   <h2>Comienzo</h2>
   </div>
@@ -100,7 +100,7 @@
 
 <!--RELEASE 2-->
 
-<div style="background-image: url(img/cabecera2.png); width:150%" id="slide3" class="slide3">
+<div style="background-image: url(img/cabecera2.png); background-size: cover;" id="slide3" class="slide3">
     <div class="br">
     <h2 id="titular">Release 1</h2>
     </div>
@@ -169,7 +169,7 @@
 <!--RELEASE 3-->
 
 
-<div style="background-image: url(img/cabecera3.png); width:100%" id="slide3" class="slide3">
+<div style="background-image: url(img/cabecera3.png); background-size: cover;" id="slide3" class="slide3">
     <div class="br">
     <h2>Release 2</h2>
     </div>
@@ -232,7 +232,7 @@
 <!--RELEASE 4-->
 
 
-<div style="background-image: url(img/cabecera4.png); width:150%" id="slide3" class="slide3">
+<div style="background-image: url(img/cabecera4.png); background-size: cover;" id="slide3" class="slide3">
     <div class="br">
     <h2>Release 3</h2>
     </div>
@@ -292,7 +292,7 @@
 <li><p class="learning">Llegar a la presentacíon con el trabajo finalizado.</p></li>
 </div>
 
-<div style="background-image: url(img/cabecera5.jpg); width:150%" id="slide3" class="slide3">
+<div style="background-image: url(img/cabecera5.jpg); background-size: cover;" id="slide3" class="slide3">
     <div class="br">
     <h2>Entrega final</h2>
     </div>
