--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             <li><a href="#20">Diseño</a></li>
             <li><a href="#21">Learning</a></li>
            </ul></li>
+           <li><a href="https://ainholop.github.io/Gs_Huerting/">Style Guide</a></li>
     </ul>
 </div>
 <div style="background-image: url(img/cabecera1.png); background-size: cover;" id="slide3" class="slide3">
